--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="//at.alicdn.com/t/font_1621218_uxx384rth7.js"></script>
 </html>
