feat: add function that is delete item in history

--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="//at.alicdn.com/t/font_1621218_l3bsxmx43in.js"></script>
+  <script src="http://at.alicdn.com/t/font_1621218_67fzg8brpw3.js"></script>
 </html>
