fix: repair play time not initialized when song change

--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,12 @@
     -->
   </body>
   <script src="http://at.alicdn.com/t/font_1621218_67fzg8brpw3.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16.13.1/umd/react.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.production.min.js"></script>
+<!-- <script src="https://unpkg.com/redux"></script>
+  <script src="https://unpkg.com/react-redux"></script>
+  <script src="https://unpkg.com/react-dom"></script>
+  <script src="https://unpkg.com/react-router-dom"></script>
+  <script src="https://unpkg.com/redux-thunk"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 </html>
